# interdeep

./: .gitignore  AGENTS.md  CLAUDE.md  PHILOSOPHY.md  README.md  pyproject.toml
.claude-plugin/: integration.json  plugin.json
agents/: report-compiler.md  research-planner.md  source-evaluator.md
commands/: research.md
scripts/: bump-version.sh  launch-mcp.sh
skills/deep-research/: SKILL.md
src/interdeep/: __init__.py  server.py
src/interdeep/extraction/: __init__.py  hybrid.py  models.py  playwright_ext.py  trafilatura_ext.py
src/interdeep/reports/: __init__.py  markdown.py
tests/: pyproject.toml  test_extraction.py  test_server.py
tests/structural/: test_skills.py  test_structure.py
