[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interdeep"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "trafilatura>=2.0",
    "aiohttp>=3.9",
    "json-repair>=0.30",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
interdeep-mcp = "interdeep.server:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/interdeep"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
